--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.2",
     "@types/uuid": "^10.0.0",
+    "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
@@ -27,6 +28,7 @@
     "supabase": ">=1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
