--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.2",
+    "@tiptap/extension-placeholder": "^2.5.9",
+    "@tiptap/react": "^2.5.9",
+    "@tiptap/starter-kit": "^2.5.9",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
