--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "slugify": "^1.6.6",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "supabase": ">=1.8.1",
