--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.2",
     "@tailwindcss/typography": "^0.5.14",
+    "@tanstack/react-query": "^5.51.23",
     "@tiptap/extension-placeholder": "^2.5.9",
     "@tiptap/react": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
